# daytona-dashboard

backend/: .env  Dockerfile  fly.toml  pyproject.toml  render.yaml  requirements.txt  start.sh
backend/app/: main.py
frontend/: .env  package.json
frontend/src/: App.tsx
frontend/src/components/: ApiKeyTable.tsx  WorkspaceTable.tsx
frontend/src/lib/: api.ts
